--- a/login.css
+++ b/login.css
@@ -1,148 +1,224 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgb(255, 255, 255);
+}
+
+.outerFrame {
+  border: solid black 2px;
+  width: 90%;
+  height: 80%;
+  max-width: 660px;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 24px 450px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+}
+
+.innerFrame {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  width: 50%;
+}
+
+.innerFrame input {
+  height: 2rem;
+  margin-bottom: 10px;
+  border-radius: 2rem;
+  border: solid gray 1px;
+  width: 12rem;
+  padding: 20px;
+}
+
+.innerFrame header h1 {
+  font-size: 3rem;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.innerFrame section {
+  margin-top: -1.5rem;
+  margin-left: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.innerFrame button {
+  width: fit-content;
+  padding: 10px 20px;
+  border-radius: 2rem;
+  background-color: rgb(0, 68, 171);
+  color: white;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+}
+
+.innerFrame button:hover {
+  background-color: rgb(26, 97, 249);
+}
+
+.innerFrame h3 {
+  font-size: 0.8rem;
+  font-family: sans-serif;
+  color: rgb(5, 5, 5);
+  font-weight: 200;
+  margin-bottom: 0.5rem;
+}
+
+.innerFrame a {
+  text-decoration: none;
+  font-size: 15px;
+  font-family: sans-serif;
+  margin-left: 0.2rem;
+}
+
+.schoolLogo {
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  width: 50%;
+  height: 100%;
+  background-color: rgb(13, 73, 202);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.schoolLogo .logoAlignement {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.schoolLogo .logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: aliceblue;
+  border: black solid 1px;
+  border-radius: 5rem;
+  margin-top: 5rem;
+  background-image: url(52f1c11b-ebbc-49a6-80e3-10e4865b9c26-removebg-preview.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 7.2rem;
+  height: 7.2rem;
+}
+
+.schoolLogo h1 {
+  font-size: 4rem;
+  display: grid;
+  align-items: center;
+  color: white;
+}
+
+.schoolLogo span {
+  margin-top: -1rem;
+  font-size: 2rem;
+  text-decoration: underline;
+  color: rgb(230, 186, 12);
+}
+
+.schoolLogo .textstyle {
+  text-decoration: none;
+  margin-top: -0.1rem;
+  font-size: 0.8rem;
+  color: aliceblue;
+}
+
+.schoolLogo .textAlignment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Responsive Styles */
+@media (max-width: 900px) {
+  .outerFrame {
+    flex-direction: column;
     height: 100vh;
-    background-color: rgb(255, 255, 255);  
-}
-
-.outerFrame{
-    border: solid black 2px;
-    width: 45rem;
-    height: 35rem;
-    border-radius: 1rem;
-    display: flex;
-    justify-content: end;
-    align-items: start;
-    background: rgba(255, 255, 255, 0.1); /* semi-transparent white */
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0 24px 450px rgba(0, 0, 0, 0.3);
-}
-
-.innerFrame{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr); 
-    gap: 7px;
-    max-width: 250px;
-    margin: auto;
-    width: 25rem;
-    height: 8rem;
-
-    input{
-        height: 2rem;
-        border-radius: 0.4rem;
-        border: solid gray 1px;
-        width: 12rem;
-        padding: 1rem;
-        
-    }
-
-    header{
-        margin-top:-7rem;
-        margin-left: 2.8rem;
-
-        h1{
-            font-size: 3rem;
-        }
-    }
-
-    section{
-        margin-top: -1.5rem;
-        margin-left: 1.5rem;
-        margin-bottom: 2rem;
-    }
-
-    button{
-        margin-top: 1rem;
-        width: 12rem;
-        padding: 0.3rem;
-        border-radius: 0.8rem;
-        background-color: rgb(0, 68, 171);
-        color:white;
-        font-weight: 600;
-    }
-
-    button:hover{
-        background-color: rgb(26, 97, 249);
-    }
-    
-    h3{
-        font-size: 0.8rem;
-        font-family: sans-serif;
-        color: rgb(5, 5, 5);
-        font-weight: 200;
-        margin-bottom: 0.5rem;
-    }
-
-    a{
-        text-decoration: none;
-        font-size: 15px;
-        font-family: sans-serif;
-        margin-left: 0.2rem;
-    }
-}
-
-.schoolLogo{
+  }
+  .schoolLogo,
+  .innerFrame {
+    width: 100%;
+    border-radius: 0;
+    min-height: 250px;
+  }
+  .schoolLogo {
     border-top-left-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-    width: 20rem;
-    height: 35rem;
-    background-color: rgb(13, 73, 202);
-    
-    
-    .logoAlignement{
-        display: flex;
-        justify-content: center;
-        align-items: start;
-        
-    }
+    border-top-right-radius: 1rem;
+    border-bottom-left-radius: 0;
+    height: auto;
+    padding: 2rem 0 1rem 0;
+  }
+  .innerFrame {
+    padding: 2rem 0 2rem 0;
+    min-height: 300px;
+  }
+  .schoolLogo .logo {
+    margin-top: 1rem;
+    width: 5.5rem;
+    height: 5.5rem;
+    background-size: 2.5cm;
+  }
+  .schoolLogo h1 {
+    font-size: 2.5rem;
+  }
+  .schoolLogo span {
+    font-size: 1.2rem;
+  }
+}
 
-    .logo{
-        background-color: aliceblue;
-        border:black solid 1px;
-        border-radius: 5rem;
-        margin-top: 5rem;
-        background-image: url(52f1c11b-ebbc-49a6-80e3-10e4865b9c26-removebg-preview.png);
-        background-size:3cm;
-        background-repeat: no-repeat;
-        width: 7.2rem;
-        height:7.2rem;
-    }
+@media (max-width: 600px) {
+  body {
+    padding: 0;
+    height: auto;
+  }
 
-    h1{
-        font-size: 4rem;
-        display: grid;
-        align-items: end;
-        color: white;
-    }
-    
-    span{
-        margin-top: -1rem;
-        font-size: 2rem;
-        text-decoration: underline;
-        color: rgb(230, 186, 12);
-    }
-
-    .textstyle{
-        text-decoration: none;
-        margin-top: -0.1rem;
-        font-size: 0.8rem;
-        color: aliceblue;
-        margin-left:2.8rem ;
-    }
-
-    .textAlignment{
-        display: flex;
-        justify-content: center;
-        align-items: start;
-        
-    }
+  .schoolLogo,
+  .innerFrame {
+    min-height: unset;
+    padding: 1.2rem 0;
+  }
+  .schoolLogo .logo {
+    width: 4rem;
+    height: 4rem;
+    background-size: 1.5cm;
+  }
+  .schoolLogo h1 {
+    font-size: 1.5rem;
+  }
+  .schoolLogo span {
+    font-size: 1rem;
+  }
+  .innerFrame header h1 {
+    font-size: 2rem;
+  }
+  .innerFrame input,
+  .innerFrame button {
+    width: 90vw;
+    max-width: 18rem;
+  }
+  .innerFrame section {
+    margin-left: 0;
+    margin-top: 0.5rem;
+  }
 }
